fixed header to not overlap content

--- a/src/containers/profile.css
+++ b/src/containers/profile.css
@@ -21,4 +21,5 @@ h2{
 
 .Team{
   overflow: scroll;
+  margin-bottom: 56px;
 }
